fix(style): center align desktop modal properly

--- a/frappe/desk/page/desktop/desktop.css
+++ b/frappe/desk/page/desktop/desktop.css
@@ -141,8 +141,10 @@
     width: var(--desktop-modal-width);
     height: var(--desktop-modal-height);
     padding: 0px !important;
-    padding-top: 23px !important;
-    padding-bottom: 23px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     & .icons{
         gap: 0px 0px;
     }
@@ -182,7 +184,12 @@
     & .desktop-icon{
         height: 127px;
         width: 126px;
-        padding: 13px 16px 13px 16px;
+        & .icon-caption {
+            width: 80%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            text-wrap: wrap;
+        }
     }
 }
 .desktop-context-menu{
